--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,15 +55,20 @@
         android:id="@+id/materia_atual"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:text="INTERVALO"
+        android:textSize="100sp"
+        app:autoSizeMaxTextSize="100sp"
+        app:autoSizeMinTextSize="12sp"
+        app:autoSizeStepGranularity="2sp"
+        app:autoSizeTextType="uniform"
         android:gravity="center"
-        android:singleLine="true"
-        android:text="PDTCC"
         android:textAllCaps="true"
-        android:textSize="70sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></TextView>
+        app:layout_constraintTop_toTopOf="parent">
+    </TextView>
 
     <!-- Próxima matéria -->
     <TextView
@@ -81,7 +86,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/materia_atual"
         app:layout_constraintVertical_bias="0.0">
-
     </TextView>
 
     <!-- Tempo restante -->
@@ -97,7 +101,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1">
-
     </TextView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
