--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,13 +27,15 @@
                 android:id="@+id/dia_da_semana"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="segunda"
+                android:text=""
                 android:textAllCaps="true"
-                android:textSize="20sp"></TextView>
+                android:textSize="20sp">
+            </TextView>
 
         </LinearLayout>
 
         <!-- LinearLayout das horas HH:mm -->
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -43,7 +45,7 @@
                 android:id="@+id/horario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="00:00"
+                android:text=""
                 android:textSize="45sp"></TextView>
 
         </LinearLayout>
@@ -56,7 +58,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:text="INTERVALO"
+        android:text=""
         android:textSize="100sp"
         app:autoSizeMaxTextSize="100sp"
         app:autoSizeMinTextSize="12sp"
@@ -77,7 +79,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:singleLine="true"
-        android:text="PRÓXIMA: PDTCC"
+        android:text=""
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
